# Codex-Integration-with-Creative-Industry-Software

./: .env.example  .gitignore  AGENTS.md  AUTOCAD_MCP_SETUP.md  CHANGELOG.md  CODEX_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_DRAFT.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  bootstrap.ps1  bootstrap.sh  build_aigc_research_report.py  design-qa.md  enhance_ai_reports.py  mao-volume5-refined-style.md  package-lock.json  package.json  pyproject.toml  reference_style_notes.md  starbridge.projects.json
apps/starbridge-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/starbridge-desktop/src-tauri/capabilities/: main.json
apps/starbridge-desktop/src-tauri/icons/: README.md
apps/starbridge-desktop/src-tauri/src/: adobe_export.rs  lib.rs  licensing.rs  updater.rs
brand/: BRAND_GUIDELINES.md  brand-tokens.json
cad-mcp-autocad/: LICENSE  README.md  README_en.md  README_zh.md
docs/: 02-codex-comfyui.md  03-codex-photoshop.md  04-codex-drawio.md  05-codex-illustrator.md  07-codex-computer-use.md  08-codex-stable-fast-3d.md  ARCHITECTURE_V2.md  CAPABILITY_MATRIX.md  COMMERCIAL_FEATURE_BOUNDARY_AUDIT.md  OFFLINE_COMMERCIALIZATION.md  P1_PREREQUISITES.md  PRIVATE_PRO_ARCHITECTURE.md  PRODUCTIZATION_AUDIT.md  PRODUCT_FACTS.md  README.md  SOFTWARE_UPDATE_CHANNEL.md  adobe-ai-agent-integration-map.md  adobe-demo-gallery.md  adobe-mcp-github-research.md  advanced-project-comparison.md  advanced-project-core-patterns.md  artisan-vector-mode.md  autocad-dxf-bridge-mvp.md  blender-reference-verified-reconstruction.md  (+55 more)
(+393 files in other folders)
