[package]
name = "starbridge-desktop"
version = "0.1.0"
description = "Windows-first local StarBridge desktop runtime"
authors = ["StarBridge contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "starbridge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
